--- a/style.css
+++ b/style.css
@@ -132,15 +132,23 @@ body {
 .catalog {
   padding: 3rem;
   margin: top 5em bottom 5em;
+  background-color: #ddd;
 }
 .catalog-text {
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 .catalog-items {
   display: flex;
   flex-wrap: wrap;
   padding: 2px;
   gap: 2rem;
+}
+
+.catalog img{
+    width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 /*Bookings*/
@@ -165,15 +173,15 @@ footer {
   color: #fff;
   display: flex;
   justify-content: center;
-  align-items: bottom;
+  
 
 }
 
 .footer-icons{
     color: #f9f9f9;
     display: flex;
-    flex-direction:column ;
-    align-items:flex-end;
+    flex-direction:row ;
+    align-items: center;
     gap: 5px;
 }
 /*Responsive Design*/
