--- a/style.css
+++ b/style.css
@@ -181,6 +181,8 @@ footer {
     color: #f9f9f9;
     display: flex;
     flex-direction:row ;
+    justify-content: center
+    ;
     align-items: center;
     gap: 5px;
 }
