--- a/@latest/src/index.css
+++ b/@latest/src/index.css
@@ -18,6 +18,7 @@ body {
   padding: 1.5rem 3rem;
   background-color: #fff;
   border-bottom: 1px solid #eee;
+  position: absolute;
   position: sticky;
 }
 
